Changes to be committed: 	modified:   blueprint.yaml
Migliorata leggibilità del codice, aggiunta dipendenza di deployment tra i nodi (node 2 e 3 aspettano fedcontr), cambiata inizializzazione couchdb

--- a/blueprint/blueprint.yaml
+++ b/blueprint/blueprint.yaml
@@ -1,7 +1,9 @@
 ExperimentName: exp1a
 Description: "Blueprint completo per cluster Proxmox basato sul Vagrantfile originale"
 Version: 1.0
-Author: Federico federico.balistreri@studio.unibo.it
+Author: 
+  name: Federico Balistreri
+  email: federico.balistreri@studio.unibo.it
 Date: 2025-10-26
 
 Networks:
@@ -13,12 +15,14 @@ Resources:
   - name: fedcontr
     type: vm
     properties:
+      provider: proxmox 
       cpu: 2
       memory: 4192
       network: mgmt
       ip: 192.168.1.100
     role: fedcontr
     services:
+      platform: []
       application:
         - name: keycloak
           port: 8443
@@ -40,23 +44,26 @@ Resources:
           env:
             COUCHDB_USER: admin
             COUCHDB_PASSWORD: password
-          dbs:
-            - name: experiments
-              documents:
-                - id: experiment1
-                  ExperimentName: exp1a
-                  ExperimentGroup: experiment1
-                  EndTime: "1/1/1"
-                  SiteID: bologna1
-                  ResourceKind: xslicenamespaces.experiment.mmwunibo.it
-                  ResourceObject:
-                    virtualMemory: 4Gb
-                    virtualCpu: 2
-                    experimentGroup: experiment1
+          init:
+            create_dbs:
+              - name: experiments
+                documents:
+                  - id: experiment1
+                    ExperimentName: exp1a
+                    ExperimentGroup: experiment1
+                    EndTime: "1/1/1"
+                    SiteID: bologna1
+                    ResourceKind: xslicenamespaces.experiment.mmwunibo.it
+                    ResourceObject:
+                      virtualMemory: 4Gb
+                      virtualCpu: 2
+                      experimentGroup: experiment1
 
   - name: node2
+    depends_on: [fedcontr]
     type: vm
     properties:
+      provider: proxmox 
       cpu: 2
       memory: 4192
       network: mgmt
@@ -68,7 +75,7 @@ Resources:
           args:
             - "--kube-apiserver-arg=oidc-ca-file=/home/vagrant/rootCA.crt"
             - "--kube-apiserver-arg=oidc-groups-claim=groups"
-            - "--kube-apiserver-arg=oidc-issuer-url=https://192.168.56.11:8443/realms/kubernetes"
+            - "--kube-apiserver-arg=oidc-issuer-url=https://192.168.1.100:8443/realms/kubernetes"
             - "--kube-apiserver-arg=oidc-client-id=bologna1"
             - "--kube-apiserver-arg=oidc-username-claim=sub"
             - "--bind-address=0.0.0.0"
@@ -86,30 +93,34 @@ Resources:
           deploy_path: ./deployments/compositeResources
 
   - name: node3
+    depends_on: [fedcontr]
     type: vm
     properties:
+      provider: proxmox 
       cpu: 2
       memory: 4192
       network: mgmt
       ip: 192.168.1.102
     role: node3
     services:
-      - name: k3s
-        args:
-          - "--kube-apiserver-arg=oidc-ca-file=/home/vagrant/rootCA.crt"
-          - "--kube-apiserver-arg=oidc-groups-claim=groups"
-          - "--kube-apiserver-arg=oidc-issuer-url=https://192.168.56.11:8443/realms/kubernetes"
-          - "--kube-apiserver-arg=oidc-client-id=bologna1"
-          - "--kube-apiserver-arg=oidc-username-claim=sub"
-          - "--bind-address=0.0.0.0"
-      - name: crossplane
-        namespace: crossplane-system
-        helm_chart: crossplane-stable/crossplane
-      - name: experiment-provider
-        deploy_path: ./deployments/experiment-provider
-      - name: kubernetes-provider
-        deploy_path: ./deployments/kubernetes-provider
-      - name: couchDBsyncoperator
-        deploy_path: ./deployments/couchDBsyncoperator
-      - name: compositeResources
-        deploy_path: ./deployments/compositeResources
+      platform:
+        - name: k3s
+          args:
+            - "--kube-apiserver-arg=oidc-ca-file=/home/vagrant/rootCA.crt"
+            - "--kube-apiserver-arg=oidc-groups-claim=groups"
+            - "--kube-apiserver-arg=oidc-issuer-url=https://192.168.1.100:8443/realms/kubernetes"
+            - "--kube-apiserver-arg=oidc-client-id=bologna1"
+            - "--kube-apiserver-arg=oidc-username-claim=sub"
+            - "--bind-address=0.0.0.0"
+        - name: crossplane
+          namespace: crossplane-system
+          helm_chart: crossplane-stable/crossplane
+      application:
+        - name: experiment-provider
+          deploy_path: ./deployments/experiment-provider
+        - name: kubernetes-provider
+          deploy_path: ./deployments/kubernetes-provider
+        - name: couchDBsyncoperator
+          deploy_path: ./deployments/couchDBsyncoperator
+        - name: compositeResources
+          deploy_path: ./deployments/compositeResources
