--- a/blueprints/blueprint_C2.yaml
+++ b/blueprints/blueprint_C2.yaml
@@ -1,3 +1,15 @@
+# ==============================================
+# Blueprint Cluster 2 (Cluster B)
+# ==============================================
+# Questo blueprint definisce il secondo cluster del Cloud Continuum.
+# Struttura identica al Cluster 1, ma con IP diversi per evitare conflitti.
+# Comprende:
+# - fedcontr_2 : nodo controller (Keycloak + CouchDB)
+# - node2_2 : primo nodo worker con K3s e Crossplane
+# - node3_2 : secondo nodo worker con K3s e Crossplane
+# La rete è sempre la stessa (mgmt) perché appartengono allo stesso dominio L2.
+# ==============================================
+
 ExperimentName: exp1a
 Description: "Cloud Continuum Blueprint - Cluster 2"
 Version: 1.0
@@ -10,8 +22,10 @@ Networks:
   - name: mgmt
     subnet: 192.168.1.0/24
     gateway: 192.168.1.1
+# Identica rete del cluster 1 (stesso dominio di gestione)
 
 Resources:
+  # Nodo controller del Cluster 2
   - name: fedcontr_2
     type: vm
     properties:
@@ -19,7 +33,8 @@ Resources:
       cpu: 2
       memory: 4192
       network: mgmt
-      ip: 192.168.1.100
+      ip: 192.168.1.100   # IP dedicato al secondo controller
+
     role: fedcontr
     services:
       platform: []
@@ -38,6 +53,7 @@ Resources:
               destination: /cert/cert.pem
             - source: realm.json
               destination: /import/realm.json
+
         - name: couchdb
           port: 5984
           image: couchdb:3.4.2
@@ -59,6 +75,7 @@ Resources:
                       virtualCpu: 2
                       experimentGroup: experiment1
 
+  # Primo worker del Cluster 2
   - name: node2_2
     depends_on: [fedcontr_2]
     type: vm
@@ -68,6 +85,7 @@ Resources:
       memory: 4192
       network: mgmt
       ip: 192.168.1.101
+
     role: node2
     services:
       platform:
@@ -82,6 +100,7 @@ Resources:
         - name: crossplane
           namespace: crossplane-system
           helm_chart: crossplane-stable/crossplane
+
       application:
         - name: experiment-provider
           deploy_path: ./deployments/experiment-provider
@@ -92,6 +111,7 @@ Resources:
         - name: compositeResources
           deploy_path: ./deployments/compositeResources
 
+  # Secondo worker del Cluster 2
   - name: node3_2
     depends_on: [fedcontr_2]
     type: vm
@@ -101,6 +121,7 @@ Resources:
       memory: 4192
       network: mgmt
       ip: 192.168.1.102
+
     role: node3
     services:
       platform:
@@ -112,9 +133,11 @@ Resources:
             - "--kube-apiserver-arg=oidc-client-id=bologna1"
             - "--kube-apiserver-arg=oidc-username-claim=sub"
             - "--bind-address=0.0.0.0"
+
         - name: crossplane
           namespace: crossplane-system
           helm_chart: crossplane-stable/crossplane
+          
       application:
         - name: experiment-provider
           deploy_path: ./deployments/experiment-provider
